moving UI around and adding more elements to the output

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "RateCalculator",
-  "title": "Rate Calculator",
+  "title": "Mike's Rate Calculator",
   "description": "A consulting / freelance rate calculator",
   "version": "0.0.1",
   "private": true,
